fix z-index header fixed

--- a/_sass/layouts/_header.scss
+++ b/_sass/layouts/_header.scss
@@ -6,7 +6,7 @@
 .main-header {
   @include position(fixed, 0 null null 0);
   @include size(100% 99px);
-  z-index: 1;
+  z-index: 5;
 
   &--fixed {
     background: rgba($black, .95);
